# evoflock

./: .gitignore  Agent.h  Boid.h  CMakeLists.txt  Draw.h  FlockParameters.h  GP.h  LocalSpace.h  README.md  Utilities.h  Vec3.h  dbscan.h  evoflock.h  flock.h  main.cpp  obstacle.h  shape.h
LazyPredator/: FunctionSet.h  GpFunction.h  GpTree.h  GpType.h  Individual.h  LazyPredator.h  MultiObjectiveFitness.h  Population.h  README.md  TournamentGroup.h  UnitTests.h  Utilities.h
doc/: EvoFlock style template.numbers  EvoFlock_Figures.pages  new template.numbers  seed_induced_variation.numbers
doc/EF PDF figs/: MOF_HV.pages  avoidance_score.pages  curve_score.pages  evo_update.pages  fit_plot.pages  seed_variance.pages  sep_score.pages  speed_score.pages  system_blocks.pages
doc/EvoFlock/: EvoFlock.tex  Evoflock.bib  old EvoFlock.tex
doc/EvoFlock paper/: EvoFlock.tex  Evoflock.bib
evoflock.xcodeproj/: project.pbxproj
evoflock.xcodeproj/xcshareddata/xcschemes/: evoflock.xcscheme
